Fix incorrect scroll-height of "Clients" page on IE
Possibly a miscalculation due to the client-grid's "flow vertically then
rotate -90deg upright to give the impression the cells flow horizontally
in columns" effect. Other browsers calculated the transformed dimensions
just fine, but IE seemed to be having troubles reading them; meaning the
rows were still flowing vertically down the page as far as its box-model
is concerned.

See line #128 of page.clients.css (relative to this commit) for a better
explanation of what the hell's going on.

--- a/src/css/page.clients.css
+++ b/src/css/page.clients.css
@@ -1,10 +1,19 @@
 body{
 	padding-bottom: 0;
+	overflow: hidden;
 }
 main{
 	max-width: none;
-	padding: .5em 0;
+	position: absolute;
+	top:	3.125em;
+	left:	0;
+	right:	0;
+	bottom:	0;
+	padding: 0;
+	overflow-x: hidden;
+	overflow-y: scroll;
 }
+
 h2{
 	text-align: center;
 	border: 0;
@@ -105,6 +114,17 @@ h2{
 @media (min-width: 37.5em){
 
 
+/** Clipping mask that's wrapped around #clients-list to combat a weird bug on IE */
+.clipping-mask{
+	position: absolute;
+	top:	0;
+	left:	0;
+	width:	100%;
+	height:	100%;
+	overflow: hidden;
+}
+
+
 /**
  * CLIENTS GRID
  *
@@ -129,7 +149,7 @@ h2{
 	cursor: default;
 	left:	0;
 	right:	0;
-	top:	6em;
+	top:	4.5em;
 
 	/** 2D transforms (supported in IE9) */
 	-webkit-transform:	rotate(-90deg) scaleX(-1);
@@ -269,6 +289,6 @@ h2{
 ===============================================================================*/
 @media (min-width: 64em){
 	#clients-list{
-		top: 7.5em
+		top: 7em;
 	}
 }
